--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,11 @@ dependencies:
   dio: ^5.3.2
   json_annotation: ^4.8.1
   firebase_crashlytics: ^3.3.5
+  firebase_core: ^2.15.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.6
-  kiwi_generator: ^4.1.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
